--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "wp-cypress",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.1.0",
+  "description": "WordPress end to end testing with Cypress.io",
   "main": "lib/index.js",
   "bin": {
     "wp-cypress": "./bin/script.sh"
   },
   "scripts": {
-    "lint:scripts": "eslint ./src/",
-    "lint:php": "$(composer config -g home)/vendor/bin/phpcs ./",
+    "lint:scripts": "eslint \"lib/**/*.js\" \"plugin/**/*.js\"",
     "postinstall": "./bin/postinstall.sh"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn run lint:scripts && $(composer config -g home)/vendor/bin/phpcs ./plugin"
+    }
   },
   "author": "Big Bite",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "^2.19.1"
+    "eslint-plugin-import": "^2.19.1",
+    "husky": "^4.2.3"
   },
   "dependencies": {
     "unfetch": "^4.1.0"
