--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "access": "private"
   },
   "bin": {
-    "wp-cypress": "./bin/script.sh"
+    "wp-cypress": "./bin/script.js"
   },
   "scripts": {
     "lint:scripts": "eslint \"lib/**/*.js\" \"plugin/**/*.js\"",
@@ -34,6 +34,9 @@
     "husky": "^4.2.3"
   },
   "dependencies": {
+    "commander": "^5.0.0",
+    "ora": "^4.0.3",
+    "shelljs": "^0.8.3",
     "unfetch": "^4.1.0"
   }
 }
