--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigbite/wp-cypress",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "WordPress end to end testing with Cypress.io",
   "main": "lib/index.js",
   "repository": "https://github.com/bigbite/wp-cypress",
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "commander": "^5.0.0",
+    "cypress-plugin-retries": "^1.5.2",
     "ora": "^4.0.3",
     "shelljs": "^0.8.3",
     "unfetch": "^4.1.0"
