--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "license": "MIT",
   "publishConfig": {
-    "access": "private"
+    "access": "public"
   },
   "bin": {
     "wp-cypress": "./bin/script.js"
