--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "glob": "^7.1.6",
     "node-fetch": "^2.6.0",
     "ora": "^4.0.3",
-    "shelljs": "^0.8.3",
-    "unfetch": "^4.1.0"
+    "shelljs": "^0.8.3"
   }
 }
