--- a/package.json
+++ b/package.json
@@ -34,15 +34,20 @@
     "husky": "^4.2.3"
   },
   "dependencies": {
+    "ajv": "^6.12.6",
+    "ajv-errors": "^1.0.1",
     "commander": "^5.0.0",
     "core-js": "^3.6.5",
+    "ejs": "^3.1.5",
     "escodegen": "^1.14.1",
     "esprima": "^4.0.1",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
     "junk": "^3.1.0",
+    "lodash": "^4.17.20",
     "node-fetch": "^2.6.0",
     "ora": "^4.0.3",
+    "pretty-error": "^2.1.1",
     "shelljs": "^0.8.3"
   }
 }
