--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "ajv": "^6.12.6",
     "ajv-errors": "^1.0.1",
+    "chokidar": "^3.5.2",
     "commander": "^5.0.0",
     "core-js": "^3.6.5",
     "ejs": "^3.1.5",
