--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "node": true,
     "cypress/globals": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "rules": {
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   }
