--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "@babel/eslint-parser": "^7.16.5",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "jest-extended": "^1.2.0",
