--- a/plugin/composer.json
+++ b/plugin/composer.json
@@ -4,7 +4,7 @@
   "type": "wordpress-plugin",
   "license": "MIT",
   "require": {
-    "fzaninotto/faker": "^1.9"
+    "fakerphp/faker": "^1.19"
   },
   "autoload": {
     "psr-4": {
