--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ora": "^4.0.3",
     "prettier": "^2.5.1",
     "pretty-error": "^4.0.0",
+    "semver": "^7.5.4",
     "shelljs": "^0.8.5"
   }
 }
