--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigbite/wp-cypress",
-  "version": "0.13.1",
+  "version": "0.13.2",
   "description": "WordPress end to end testing with Cypress.io",
   "repository": "https://github.com/bigbite/wp-cypress",
   "author": {
@@ -59,6 +59,7 @@
     "prettier": "^2.5.1",
     "pretty-error": "^4.0.0",
     "semver": "^7.3.7",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "unfetch": "^5.0.0"
   }
 }
