--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "prettier": "^2.5.1",
     "pretty-error": "^4.0.0",
     "semver": "^7.3.7",
-    "shelljs": "^0.8.5",
-    "unfetch": "^5.0.0"
+    "shelljs": "^0.8.5"
   }
 }
